AboutController, GameOverController, HelpController - tests